// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox demo -- checkbox 1`] = `
.c24 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c25 {
  margin-right: 8px;
  color: #4074e1;
}

.c10 {
  margin-right: 8px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c19 {
  width: 20px;
  height: 20px;
}

.c12 .c21 {
  left: 13px;
  height: 10px;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.c23 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c23:hover {
  border-color: #4683e6;
}

.c23 .c19 {
  width: 20px;
  height: 20px;
}

.c23 .c21 {
  left: 13px;
  height: 10px;
}

.c23 .c15,
.c23 .c17 {
  line-height: 16px;
}

.c23 .c15 {
  padding-right: 20px;
}

.c23 .c17 {
  padding-left: 20px;
}

.c23 .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.c23 .c19 {
  left: 49px;
}

.c23 .c21 {
  background: #9fecc0;
}

.c23 .c17 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        checked
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          checked=""
          class="c23"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <span
      class="c24"
    >
      <i
        checked=""
        class="icon__checkbox-ed c25 "
      />
      checkbox
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-checked 1`] = `
.c0 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c1 {
  margin-right: 8px;
  color: #6b798e;
}

.c2 {
  margin-right: 8px;
  color: #4074e1;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="icon__checkbox c1 "
      />
      unchecked
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        checked=""
        class="icon__checkbox-ed c2 "
      />
      checked
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-disabled 1`] = `
.c0 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c2 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c1 {
  margin-right: 8px;
  color: #6b798e;
}

.c3 {
  margin-right: 8px;
  color: #bbb;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="icon__checkbox c1 "
      />
      common
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c2"
      disabled=""
    >
      <i
        class="icon__checkbox c3 "
        disabled=""
      />
      disabled
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-size 1`] = `
.c2 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c0 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
}

.c3 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
}

.c1 {
  margin-right: 8px;
  color: #6b798e;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        class="icon__checkbox c1 "
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c2"
    >
      <i
        class="icon__checkbox c1 "
      />
      checkbox
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c3"
    >
      <i
        class="icon__checkbox c1 "
      />
      checkbox
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- checkbox-uncontrolled 1`] = `
.c0 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c1 {
  margin-right: 8px;
  color: #4074e1;
}

<div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        checked=""
        class="icon__checkbox-ed c1 "
      />
      controlled
    </span>
  </div>
  <div
    class="demo-wrap"
  >
    <span
      class="c0"
    >
      <i
        checked=""
        class="icon__checkbox-ed c1 "
      />
      uncontrolled
    </span>
  </div>
</div>
`;

exports[`Checkbox demo -- group 1`] = `
.c25 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c26 {
  margin-right: 8px;
  color: #6b798e;
}

.c23 .c24 {
  margin-right: 8px;
}

.c23 .c24:last-child {
  margin-right: 0;
}

.c10 {
  margin-right: 8px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c11 .c9 {
  color: #4074e1;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c14 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c16 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c18 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c20 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c22 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c19 {
  width: 20px;
  height: 20px;
}

.c12 .c21 {
  left: 13px;
  height: 10px;
}

.c12 .c15,
.c12 .c17 {
  line-height: 16px;
}

.c12 .c15 {
  padding-right: 20px;
}

.c12 .c17 {
  padding-left: 20px;
}

.c12 .c15 {
  display: none;
}

.lfPLEx .c19 {
  width: 20px;
  height: 20px;
}

.lfPLEx .c21 {
  left: 13px;
  height: 10px;
}

.lfPLEx .c15,
.lfPLEx .c17 {
  line-height: 16px;
}

.lfPLEx .c15 {
  padding-right: 20px;
}

.lfPLEx .c17 {
  padding-left: 20px;
}

.lfPLEx .c13 {
  border-color: #9fecc0;
  background-color: #c3f3d8;
  color: #5cd78e;
}

.lfPLEx .c19 {
  left: 49px;
}

.lfPLEx .c21 {
  background: #9fecc0;
}

.lfPLEx .c17 {
  display: none;
}

.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        size
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            sm
          </div>
          <div
            checked=""
            class="c7 c11"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            md
          </div>
          <div
            class="c7 c8"
          >
            <i
              class="icon__circle c9 c10 "
            />
            lg
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        disabled
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13 c14"
          >
            <span
              class="c15 c16"
            >
              ON
            </span>
            <span
              class="c17 c18"
            >
              OFF
            </span>
            <span
              class="c19 c20"
            >
              <span
                class="c21 c22"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        value
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c23"
        >
          <span
            class="c24 c25"
          >
            <i
              class="icon__checkbox c26 "
            />
            1
          </span>
          <span
            class="c24 c25"
          >
            <i
              class="icon__checkbox c26 "
            />
            2
          </span>
          <span
            class="c24 c25"
          >
            <i
              class="icon__checkbox c26 "
            />
            3
          </span>
          <span
            class="c24 c25"
          >
            <i
              class="icon__checkbox c26 "
            />
            4
          </span>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="c23"
    >
      <span
        class="c24 c25"
      >
        <i
          class="icon__checkbox c26 "
        />
        1
      </span>
      <span
        class="c24 c25"
      >
        <i
          class="icon__checkbox c26 "
        />
        2
      </span>
      <span
        class="c24 c25"
      >
        <i
          class="icon__checkbox c26 "
        />
        3
      </span>
      <span
        class="c24 c25"
      >
        <i
          class="icon__checkbox c26 "
        />
        4
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-disabled 1`] = `
.c2 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c4 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  color: #bbb;
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  margin-right: 8px;
  color: #6b798e;
}

.c5 {
  margin-right: 8px;
  color: #bbb;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c4"
        disabled=""
      >
        <i
          class="icon__checkbox c5 "
          disabled=""
        />
        1
      </span>
      <span
        class="c1 c4"
        disabled=""
      >
        <i
          class="icon__checkbox c5 "
          disabled=""
        />
        2
      </span>
      <span
        class="c1 c4"
        disabled=""
      >
        <i
          class="icon__checkbox c5 "
          disabled=""
        />
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-options 1`] = `
.c2 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c3 {
  margin-right: 8px;
  color: #6b798e;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        option-1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        option-2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        option-3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        checkbox-1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        checkbox-2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        checkbox-3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-size 1`] = `
.c4 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c2 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 22px;
  line-height: 22px;
}

.c5 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 34px;
  line-height: 34px;
}

.c3 {
  margin-right: 8px;
  color: #6b798e;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        2
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c4"
      >
        <i
          class="icon__checkbox c3 "
        />
        1
      </span>
      <span
        class="c1 c4"
      >
        <i
          class="icon__checkbox c3 "
        />
        2
      </span>
      <span
        class="c1 c4"
      >
        <i
          class="icon__checkbox c3 "
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c5"
      >
        <i
          class="icon__checkbox c3 "
        />
        1
      </span>
      <span
        class="c1 c5"
      >
        <i
          class="icon__checkbox c3 "
        />
        2
      </span>
      <span
        class="c1 c5"
      >
        <i
          class="icon__checkbox c3 "
        />
        3
      </span>
    </div>
  </div>
</div>
`;

exports[`Checkbox demo -- group-uncontrolled 1`] = `
.c2 {
  font-size: 14px;
  cursor: pointer;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c3 {
  margin-right: 8px;
  color: #6b798e;
}

.c4 {
  margin-right: 8px;
  color: #4074e1;
}

.c0 .c1 {
  margin-right: 8px;
}

.c0 .c1:last-child {
  margin-right: 0;
}

<div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          checked=""
          class="icon__checkbox-ed c4 "
        />
        2
      </span>
      <span
        class="c1 c2"
      >
        <i
          checked=""
          class="icon__checkbox-ed c4 "
        />
        3
      </span>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="c0"
    >
      <span
        class="c1 c2"
      >
        <i
          checked=""
          class="icon__checkbox-ed c4 "
        />
        1
      </span>
      <span
        class="c1 c2"
      >
        <i
          class="icon__checkbox c3 "
        />
        2
      </span>
      <span
        class="c1 c2"
      >
        <i
          checked=""
          class="icon__checkbox-ed c4 "
        />
        3
      </span>
    </div>
  </div>
</div>
`;
